@@ -86,8 +86,10 @@ public class MagnetBlock extends ZetaBlock implements EntityBlock{
 
 		BlockEntity tilePresent = world.getBlockEntity(targetPos);
 		CompoundTag tileData = new CompoundTag();
-		if(tilePresent != null && !(tilePresent instanceof MagnetizedBlockBlockEntity))
+		if(tilePresent != null && !(tilePresent instanceof MagnetizedBlockBlockEntity)) {
 			tileData = tilePresent.saveWithFullMetadata();
+			tilePresent.setRemoved();
+		}
 
 		BlockState setState = MagnetsModule.magnetized_block.defaultBlockState().setValue(MovingMagnetizedBlock.FACING, moveDir);
 		MagnetizedBlockBlockEntity movingTile = new MagnetizedBlockBlockEntity(endPos, setState, targetState, tileData, moveDir);
