@@ -1,0 +1,24 @@
+package org.violetmoon.quark.content.automation.client.screen;
+
+import net.minecraft.client.gui.GuiGraphics;
+import net.minecraft.client.gui.screens.inventory.DispenserScreen;
+import net.minecraft.network.chat.Component;
+import net.minecraft.resources.ResourceLocation;
+import net.minecraft.world.entity.player.Inventory;
+import net.minecraft.world.inventory.DispenserMenu;
+import org.violetmoon.quark.base.Quark;
+
+public class TroughScreen extends DispenserScreen {
+
+    private static final ResourceLocation CONTAINER_LOCATION = Quark.asResource("textures/gui/container/feeding_troughi.png");
+
+    public TroughScreen(DispenserMenu pMenu, Inventory pPlayerInventory, Component pTitle) {
+        super(pMenu, pPlayerInventory, pTitle);
+    }
+
+    protected void renderBg(GuiGraphics pGuiGraphics, float pPartialTick, int pMouseX, int pMouseY) {
+        int i = (this.width - this.imageWidth) / 2;
+        int j = (this.height - this.imageHeight) / 2;
+        pGuiGraphics.blit(CONTAINER_LOCATION, i, j, 0, 0, this.imageWidth, this.imageHeight);
+    }
+}
